# multimedia-retrieval

./: .gitignore  .gitmodules  1  HNSW.py  KD_tree.py  LICENSE  README.md  expand_hist_df.py  exploratory_analysis.ipynb  get_global_descriptors.py  global_descriptors.pkl  mesh_repair.py  requirements.txt  resample_test.py  sample_classes.py  tsne_copyy.py
Output/: gd.csv  (+5 more)
mr-tool/: pyproject.toml
mr-tool/mr_tool/: __init__.py
mr-tool/src/: FINAL_mesh_repair.py  FINAL_normalization.py  FINAL_query.py  FINAL_resample.py  FINAL_shape_descriptors.py  IStepNormalization.py  IWindowDBSelector.py  MainWindow.py  Mesh.py  NormalizationWizard.py  QHSeparationLine.py  ShapeDatabase_INFOMR_broken_normalization.txt  StepAlignPCA.py  StepFlip.py  StepResample.py  StepScale.py  StepTranslate.py  Widget3DPlot.py  Widget3DViewer.py  WidgetBarChart.py  WidgetDescriptors.py  WidgetEmptyStats.py  WidgetHistogram.py  WidgetNoDb.py  WidgetSimpleHist.py  WidgetStats.py  WindowDatabase.py  WindowDatabaseStats.py  WindowDescriptors.py  WindowMain.py  WindowNormalization.py  WindowQuery.py  WindowQueryV2.py  __init__.py  anand.py  constants.py  generate_statistics.py  global_descriptors.py  normalization.py  remesh_statistics.py  (+6 more)
mr-tool/src/1/: analysis.py
mr-tool/src/2/: 1_analysis.py  analysis.py  stats.py
mr-tool/src/StepFive/: HNSW.py
mr-tool/src/StepFour/: combine_csv.py  create_matrix.py  dist.py  expand_hist_df.py  read_csv.py  z_normalize  z_normalize.py
mr-tool/src/StepSix/: basic_metrics.py  presix.py  roc.py
mr-tool/src/s1/: analysis.py
mr-tool/src/s2/: stats.py
(+147 files in other folders)
