[tool.poetry]
name = "mr-tool"
version = "0.1.0"
description = ""
authors = ["Apoorva Anand <apoorvaanand.work@gmail.com>",
           "Nick", "Vlad <vlad.cpuscaru@gmail.com>"] # fill in emails
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
vedo = "^2024.5.2"
pyqt5 = "^5.15.11"
open3d = "^0.18.0"
scikit-learn = "^1.5.2"
pyyaml = "^6.0.2"
addict = "^2.4.0"
pandas = "^2.2.3"
tqdm = "^4.66.5"
hnswlib = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
