[tool.poetry]
name = "mr-tool"
version = "0.1.0"
description = ""
authors = ["Apoorva Anand <apoorvaanand.work@gmail.com>",
           "Nick" <"n.dijkhuizen@students.uu.nl">, "Vlad <vlad.cpuscaru@gmail.com>"] # fill in emails
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
vedo = "^2024.5.2"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
